# piscine_python

Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py  tester.py
Python-0-Starting/ex09/: README.md  pyproject.toml
Python-0-Starting/ex09/src/ft_package/: __init__.py
Python-0-Starting/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python-0-Starting/ex09/tests/: tester.py
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py
